# erasus

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  check_nb_errors.py  erasus_complete_comprehensive_specification.txt  extract_text.py  fix_notebooks.py  project_ideas.md  pyproject.toml  reproduce_issue.py  requirements.txt  test_results.txt  test_results_q.txt
.agent/workflows/: agenda.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: beta_testers.md  bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  publish.yml  security.yml
apps/: dashboard_gradio.py  dashboard_streamlit.py  hf_spaces_gradio.py
benchmarks/: common.py
benchmarks/custom/: efficiency_benchmark.py  (+2 more)
configs/: default.yaml  example_full_run.yaml
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
docs/: Makefile  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
erasus/: __init__.py  fabric.py  version.py
erasus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: clip_basic.py
notebooks/: 01_introduction.ipynb  02_coreset_analysis.ipynb  clip_unlearning_demo.ipynb  copyright_removal_example.ipynb  demo_remove_harry_potter_from_gpt2.ipynb  executed_harry_potter.ipynb  executed_nsfw_removal.ipynb  nsfw_removal_results.json  nsfw_removal_stable_diffusion.ipynb
scripts/: download_datasets.py  run_benchmarks.sh  setup_env.sh
tests/: __init__.py  conftest.py  test_advanced.py  test_components.py  test_core.py  test_end_to_end.py  test_imports.py  test_integration.py  test_selectors.py
(+444 files in other folders)
